# Generic-HLS-FFT

./: .gitignore  CMakeLists.txt  README.md
scripts/: report_parser.tcl
src/common/: CMakeLists.txt  DataVector.cpp  DataVector.hpp  Parameters.cpp  Parameters.hpp  bit_reverse.hpp  const_logs.hpp  fft_fftw3.cpp  fft_fftw3.hpp  mult_add.cpp  mult_add.hpp
src/common/spiral_utils/: dig_rev_perm_config.h  dig_rev_perm_num_stage.h  spiral_utils.hpp  stride_perm_config.h  stride_perm_num_stage.h
src/fft/: CMakeLists.txt  gen_hls.tcl  parse_reports.tcl
src/fft/module/: fft_sbg_radix.hpp  fft_sbg_radix_hlstop.cpp  fft_sbg_radix_hlstop.hpp  fft_sbg_radix_hlstop_axis.cpp  fft_sbg_radix_hlstop_axis.hpp  fft_sbg_radix_utils.hpp
src/fft/sw_wrap/: lib_fft_sbg_radix.cpp  lib_fft_sbg_radix.hpp
src/fft/tb/: fft_sbg_radix_tb.cpp
src/fft_fftw/: CMakeLists.txt
src/fft_fftw/sw_wrap/: lib_fft_float_gold_fftw.cpp  lib_fft_float_gold_fftw.hpp
src/tests/: CMakeLists.txt  fft_calc.cpp
src/tools/LUT_gen/: CMakeLists.txt  LUT_gen.cpp
src/tools/SIG_gen/: CMakeLists.txt  SIG_gen.cpp
